# autolign

./: .gitignore  CMakeLists.txt  README.md  ROS_comms.py  package.xml  setup.py
AutolignMatlab/: PlotSim.m
matlab/: AnimSim.m  SimMain.m  VehicleParam.m
matlab/functions/: ackermann.m  ackermannNl.m  drawCog.m  plotVehicle.m  trans2d.m
scripts/: 2018-11-12-16-51-47.csv  2018-11-12-16-51-52.csv  2018-11-15-14-31-26.csv  2018-11-15-14-31-52.csv  2018-11-15-14-36-20.csv  2018-11-15-14-37-53.csv  2018-11-15-14-38-10.csv  2018-11-15-14-38-26.csv  2018-11-15-14-41-42.csv  2018-11-15-14-46-52.csv  2018-11-15-14-49-09.csv  2018-11-16-00-37-45.csv  anim_autolign.py  autolign.py  ctrl_autolign.py  fileman.py  junwu_learning_test.ipynb  learn_autolign.py  main.py  node_autolign.py  plot_autolign.py  q_learn_autolign.py  q_learning_test.csv  q_learning_test.policy  q_learning_test.py  ros_autolign.py  sim_autolign.py  test_file.py  util_autolign.py
supportDocs/alsterda_submit_docs/: GradDescNL_data.xlsx  ValEst_data.xlsx
supportDocs/alsterda_submit_docs/peer/: cas.txt  keywords.txt  peer.txt
supportDocs/alsterda_submit_docs/progress/: title.txt
supportDocs/alsterda_submit_docs/proposal/: group.txt
